2022-05-13 v.0.1.2

	* Support for Thunderbird

	* Support for configuring the service for rendering formulas (not fully operational)

	* Options can be reset to default

	* Support for user configured macros for common subformulas

	* Updated integrated MathQuill version to 685bda1

	* Updated jQuery to version 3.6.0

	* Supporting Google Inbox (http://inbox.google.com)

	* Supporting \mathcal for script font, \cases for cases

2017-11-21 v0.1.1

	* Created a Chrome version of the plugin (needs a slightly different manifest.json)

	* Bugfix: Removed blue border around web-pages.

	* Icon for extension is now a PNG (SVG not supported by Chrome).

2017-11-20 v0.1.0

	* Ported to WebExtensions framework (from GreaseMonkey)