@@ -1,3 +1,7 @@
+???        v.0.1.3
+
+    * User-configurable CSS styling
+
 2022-05-13 v.0.1.2
 
 	* Support for Thunderbird
